<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/gri"
     >

    <Button
        android:id="@+id/buttonDespreDespreNoi"
        style="@drawable/button_custom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_border"
        android:onClick="changeDespre"
        android:text="@string/despre_noi"
        android:textColor="@color/gri"
        android:textColorLink="@color/gri" />

    <Button
        android:id="@+id/buttonDespreReguliComentarii"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonDespreDespreNoi"
        android:layout_alignRight="@+id/buttonDespreDespreNoi"
        android:layout_below="@+id/buttonDespreDespreNoi"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_border"
        android:onClick="changeDespre"
        android:text="@string/reguli_comentarii" 
        android:textColor="@color/gri"
        android:textColorLink="@color/gri"
        />

    <Button
        android:id="@+id/buttonDespreTermeniSiConditii"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonDespreReguliComentarii"
        android:layout_alignRight="@+id/buttonDespreReguliComentarii"
        android:layout_below="@+id/buttonDespreReguliComentarii"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_border"
        android:onClick="changeDespre"
        android:text="@string/termeni_si_conditii"
        android:textColor="@color/gri"
        android:textColorLink="@color/gri" />
    
    <Button
        android:id="@+id/buttonDespreAplicatie"
        style="@drawable/button_custom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonDespreTermeniSiConditii"
        android:layout_alignRight="@+id/buttonDespreTermeniSiConditii"
        android:layout_below="@+id/buttonDespreTermeniSiConditii"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_border"
        android:onClick="changeDespre"
        android:text="@string/aplicatie"
        android:textColor="@color/gri"
        android:textColorLink="@color/gri" />
    
</RelativeLayout>